--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p class="desc" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero,
           porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis
           perspiciatis illo.</p>
-        <div class="crimsonBack num">
+        <div class="greenBack num">
           <div>
             <h5 class="number">2</h5>
             <p class="move">Read</p>
@@ -66,14 +66,14 @@
 
 
     <figure>
-      <div class="imgCard town2"></div>
+      <div class="imgCard town3"></div>
       <figcaption>
-        <p class="days crimson">4 years ago</p>
+        <p class="days orange">4 years ago</p>
         <h2 class="header2">Lorem</h2>
         <p class="desc" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero,
           porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis
           perspiciatis illo.</p>
-        <div class="crimsonBack num">
+        <div class="orangeBack num">
           <div>
             <h5 class="number">2</h5>
             <p class="move">Read</p>
