--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <figure>
       <div class="imgCard town2"></div>
       <figcaption>
-        <p class="days crimson">4 years ago</p>
+        <p class="days green">4 years ago</p>
         <h2 class="header2">Lorem</h2>
         <p class="desc" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero,
           porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis
