--- a/index.html
+++ b/index.html
@@ -12,83 +12,77 @@
 </head>
 
 <body>
-  <section class="cards">
-    <figure>
-      <div class="imgCard town1"></div>
-      <figcaption>
-        <p class="date crimson">7 days ago</p>
-        <h2 class="header2">Lorem</h2>
-        <p class="desc" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero,
-          porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis
-          perspiciatis illo.</p>
-        <div class="crimsonBack num">
-          <div>
-            <h5 class="number">7</h5>
-            <p class="move">Read</p>
+  <section class="cards-container">
+    <figure class="card">
+      <div class="card__image card__image_town1"></div>
+      <figcaption class="card__caption">
+        <p class="card__date text_crimson">7 days ago</p>
+        <h2 class="card__title heading_h2">Lorem</h2>
+        <p class="card__description" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis perspiciatis illo.</p>
+        <div class="card__info card__info_crimson">
+          <div class="card__info-item">
+            <h5 class="card__info-number">7</h5>
+            <p class="card__info-text">Read</p>
           </div>
-          <div>
-            <h5 class="number">6548</h5>
-            <p class="move">View</p>
+          <div class="card__info-item">
+            <h5 class="card__info-number">6548</h5>
+            <p class="card__info-text">View</p>
           </div>
-          <div>
-            <h5 class="number">65</h5>
-            <p class="move">Comments</p>
+          <div class="card__info-item">
+            <h5 class="card__info-number">65</h5>
+            <p class="card__info-text">Comments</p>
+          </div>
+        </div>
+      </figcaption>
+    </figure>
+    
+    <figure class="card">
+      <div class="card__image card__image_town2"></div>
+      <figcaption class="card__caption">
+        <p class="card__date text_green">4 years ago</p>
+        <h2 class="card__title heading_h2">Lorem</h2>
+        <p class="card__description" id="c2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis perspiciatis illo.</p>
+        <div class="card__info card__info_green">
+          <div class="card__info-item">
+            <h5 class="card__info-number">2</h5>
+            <p class="card__info-text">Read</p>
+          </div>
+          <div class="card__info-item">
+            <h5 class="card__info-number">6548</h5>
+            <p class="card__info-text">View</p>
+          </div>
+          <div class="card__info-item">
+            <h5 class="card__info-number">65</h5>
+            <p class="card__info-text">Comments</p>
           </div>
         </div>
       </figcaption>
     </figure>
 
 
-    <figure>
-      <div class="imgCard town2"></div>
-      <figcaption>
-        <p class="date green">4 years ago</p>
-        <h2 class="header2">Lorem</h2>
-        <p class="desc" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero,
-          porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis
-          perspiciatis illo.</p>
-        <div class="greenBack num">
-          <div>
-            <h5 class="number">2</h5>
-            <p class="move">Read</p>
+    <figure class="card">
+      <div class="card__image card__image_town3"></div>
+      <figcaption class="card__caption">
+        <p class="card__date text_orange">4 years ago</p>
+        <h2 class="card__title heading_h2">Lorem</h2>
+        <p class="card__description" id="c3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis perspiciatis illo.</p>
+        <div class="card__info orangeBack">
+          <div class="card__info-item">
+            <h5 class="card__info-number">2</h5>
+            <p class="card__info-text">Read</p>
           </div>
-          <div>
-            <h5 class="number">6548</h5>
-            <p class="move">View</p>
+          <div class="card__info-item">
+            <h5 class="card__info-number">6548</h5>
+            <p class="card__info-text">View</p>
           </div>
-          <div>
-            <h5 class="number">65</h5>
-            <p class="move">Comments</p>
+          <div class="card__info-item">
+            <h5 class="card__info-number">65</h5>
+            <p class="card__info-text">Comments</p>
           </div>
         </div>
       </figcaption>
     </figure>
-
-
-    <figure>
-      <div class="imgCard town3"></div>
-      <figcaption>
-        <p class="date orange">4 years ago</p>
-        <h2 class="header2">Lorem</h2>
-        <p class="desc" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero,
-          porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis
-          perspiciatis illo.</p>
-        <div class="orangeBack num">
-          <div>
-            <h5 class="number">2</h5>
-            <p class="move">Read</p>
-          </div>
-          <div>
-            <h5 class="number">6548</h5>
-            <p class="move">View</p>
-          </div>
-          <div>
-            <h5 class="number">65</h5>
-            <p class="move">Comments</p>
-          </div>
-        </div>
-      </figcaption>
-    </figure>
+    
   </section>
 
 </body>
