--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 </head>
 
-<body>
+<body class="body">
   <section class="cards-container">
     <figure class="card">
       <div class="card__image card__image_town1"></div>
       <figcaption class="card__caption">
         <p class="card__date text_crimson">7 days ago</p>
-        <h2 class="card__title heading_h2">Lorem</h2>
+        <h2 class="card__title">Lorem</h2>
         <p class="card__description" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis perspiciatis illo.</p>
         <div class="card__info card__info_crimson">
           <div class="card__info-item">
@@ -40,7 +40,7 @@
       <div class="card__image card__image_town2"></div>
       <figcaption class="card__caption">
         <p class="card__date text_green">4 years ago</p>
-        <h2 class="card__title heading_h2">Lorem</h2>
+        <h2 class="card__title">Lorem</h2>
         <p class="card__description" id="c2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis perspiciatis illo.</p>
         <div class="card__info card__info_green">
           <div class="card__info-item">
@@ -64,9 +64,9 @@
       <div class="card__image card__image_town3"></div>
       <figcaption class="card__caption">
         <p class="card__date text_orange">4 years ago</p>
-        <h2 class="card__title heading_h2">Lorem</h2>
+        <h2 class="card__title">Lorem</h2>
         <p class="card__description" id="c3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum voluptas quas praesentium corporis perspiciatis illo.</p>
-        <div class="card__info orangeBack">
+        <div class="card__info card__info_orange">
           <div class="card__info-item">
             <h5 class="card__info-number">2</h5>
             <p class="card__info-text">Read</p>
