--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <figure class="card">
             <div class="card__image card__image_town1"></div>
             <figcaption class="card__caption">
-                <p class="card__date text_crimson">7 days ago</p>
+                <p class="card__date card__date--crimson">7 days ago</p>
                 <h2 class="card__title">Lorem</h2>
                 <p class="card__description" id="c1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae
                     excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum
@@ -41,7 +41,7 @@
         <figure class="card">
             <div class="card__image card__image_town2"></div>
             <figcaption class="card__caption">
-                <p class="card__date text_green">4 years ago</p>
+                <p class="card__date card__date--green">4 years ago</p>
                 <h2 class="card__title">Lorem</h2>
                 <p class="card__description" id="c2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae
                     excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum
@@ -67,7 +67,7 @@
         <figure class="card">
             <div class="card__image card__image_town3"></div>
             <figcaption class="card__caption">
-                <p class="card__date text_orange">4 years ago</p>
+                <p class="card__date card__date--orange">4 years ago</p>
                 <h2 class="card__title">Lorem</h2>
                 <p class="card__description" id="c3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure vitae
                     excepturi quam vero, porro, tempora ex optio aliquid natus velit molestiae iste officiis eum
